--- a/tutorials/01_authentication.ipynb
+++ b/tutorials/01_authentication.ipynb
@@ -1,239 +1,138 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Tutorial 1: Getting Started with GEE Authentication\n",
-    "\n",
-    "Welcome to **GeeAdvance**! This tutorial will guide you through the authentication process for Google Earth Engine.\n",
-    "\n",
-    "## What You'll Learn\n",
-    "\n",
-    "- How to authenticate with Google Earth Engine\n",
-    "- How to initialize GEE for use\n",
-    "- How to verify your authentication status\n",
-    "- Troubleshooting common authentication issues\n",
-    "\n",
-    "## Prerequisites\n",
-    "\n",
-    "1. A Google account\n",
-    "2. Access to Google Earth Engine (sign up at https://earthengine.google.com/)\n",
-    "3. Python 3.8 or higher\n",
-    "4. geeadvance package installed (`pip install geeadvance`)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 1: Import the Package\n",
-    "\n",
-    "First, let's import the geeadvance package:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import geeadvance as ga\n",
-    "\n",
-    "print(f\"GeeAdvance version: {ga.__version__}\")\n",
-    "print(f\"Author: {ga.__author__}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 2: Authenticate with Google Earth Engine\n",
-    "\n",
-    "Authentication is required to access GEE resources. This step will open a browser window where you'll need to:\n",
-    "\n",
-    "1. Sign in with your Google account\n",
-    "2. Grant permissions to Earth Engine\n",
-    "3. Copy the authorization code\n",
-    "4. Paste it back in the terminal/notebook"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Authenticate with GEE\n",
-    "ga.authenticate()\n",
-    "\n",
-    "# Note: For Google Colab, use:\n",
-    "# ga.authenticate(auth_mode='colab')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 3: Initialize Google Earth Engine\n",
-    "\n",
-    "After authentication, you need to initialize the Earth Engine API:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize GEE\n",
-    "ga.initialize()\n",
-    "\n",
-    "# If you have a specific project, you can specify it:\n",
-    "# ga.initialize(project='your-project-id')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 4: Verify Authentication\n",
-    "\n",
-    "Let's verify that everything is working correctly:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check if authenticated\n",
-    "if ga.is_authenticated():\n",
-    "    print(\"✓ Successfully authenticated and initialized!\")\n",
-    "else:\n",
-    "    print(\"✗ Authentication failed. Please try again.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 5: Quick Setup (Alternative Method)\n",
-    "\n",
-    "For convenience, you can use the `quick_setup()` function that combines authentication and initialization:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Quick setup (only if not already authenticated)\n",
-    "# ga.quick_setup()\n",
-    "\n",
-    "# Or with a specific project:\n",
-    "# ga.quick_setup(project='your-project-id')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 6: Test Your Connection\n",
-    "\n",
-    "Let's test the connection by performing a simple GEE operation:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import ee\n",
-    "\n",
-    "# Create a simple test\n",
-    "test_number = ee.Number(42)\n",
-    "result = test_number.add(8).getInfo()\n",
-    "\n",
-    "print(f\"Test calculation: 42 + 8 = {result}\")\n",
-    "print(\"✓ GEE connection is working!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Troubleshooting\n",
-    "\n",
-    "### Common Issues and Solutions\n",
-    "\n",
-    "1. **\"Authentication failed\" error**\n",
-    "   - Make sure you have a Google account\n",
-    "   - Sign up for GEE access at https://earthengine.google.com/\n",
-    "   - Try running `earthengine authenticate` in your terminal\n",
-    "\n",
-    "2. **\"Project not found\" error**\n",
-    "   - You may need to specify a project ID\n",
-    "   - Check your GEE project settings\n",
-    "\n",
-    "3. **\"Module not found\" error**\n",
-    "   - Make sure geeadvance is installed: `pip install geeadvance`\n",
-    "   - Restart your Python kernel\n",
-    "\n",
-    "4. **Browser doesn't open for authentication**\n",
-    "   - Copy the URL from the terminal and paste it in your browser manually\n",
-    "   - For remote servers, use `auth_mode='gcloud'`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Summary\n",
-    "\n",
-    "In this tutorial, you learned:\n",
-    "\n",
-    "- ✓ How to import geeadvance\n",
-    "- ✓ How to authenticate with Google Earth Engine\n",
-    "- ✓ How to initialize the GEE API\n",
-    "- ✓ How to verify your authentication\n",
-    "- ✓ How to troubleshoot common issues\n",
-    "\n",
-    "## Next Steps\n",
-    "\n",
-    "Now that you're authenticated, proceed to:\n",
-    "- **Tutorial 2**: Loading and Visualizing GEE Datasets\n",
-    "\n",
-    "## Additional Resources\n",
-    "\n",
-    "- [Google Earth Engine Documentation](https://developers.google.com/earth-engine)\n",
-    "- [GeeAdvance Documentation](https://pulakeshpradhan.github.io/geeadvance/)\n",
-    "- [GEE Code Editor](https://code.earthengine.google.com/)"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.0"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+    "cells": [
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# Tutorial 1: Getting Started with GEE Authentication\n",
+                "\n",
+                "Welcome to **GeeAdvance**! This tutorial will guide you through the authentication process for Google Earth Engine.\n",
+                "\n",
+                "## What You'll Learn\n",
+                "\n",
+                "- How to authenticate with Google Earth Engine\n",
+                "- How to initialize GEE for use with your Project ID\n",
+                "- How to verify your authentication status\n",
+                "- Troubleshooting common authentication issues\n",
+                "\n",
+                "## Prerequisites\n",
+                "\n",
+                "1. A Google account\n",
+                "2. Access to Google Earth Engine (sign up at https://earthengine.google.com/)\n",
+                "3. Python 3.8 or higher\n",
+                "4. geeadvance package installed (`pip install geeadvance`)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Step 1: Import the Package\n",
+                "\n",
+                "First, let's import the geeadvance package and Earth Engine:"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import ee\n",
+                "import geeadvance\n",
+                "\n",
+                "print(f\"GeeAdvance version: {geeadvance.__version__}\")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Step 2: Authenticate with Google Earth Engine\n",
+                "\n",
+                "Authentication is required to access GEE resources. This step will open a browser window for you to login."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Standard GEE authentication method\n",
+                "ee.Authenticate()"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Step 3: Initialize Google Earth Engine\n",
+                "\n",
+                "After authentication, you need to initialize the Earth Engine API with your specific Project ID:"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Initialize GEE with your Project ID\n",
+                "ee.Initialize(project='your-project-id')"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Step 4: Verify Authentication\n",
+                "\n",
+                "Let's verify that everything is working correctly:"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Try to access a simple GEE object\n",
+                "try:\n",
+                "    print(ee.Number(1).getInfo())\n",
+                "    print(\"✓ Successfully authenticated and initialized!\")\n",
+                "except Exception as e:\n",
+                "    print(f\"✗ Connection failed: {e}\")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Troubleshooting\n",
+                "\n",
+                "### Common Issues and Solutions\n",
+                "\n",
+                "1. **\"Authentication failed\" error**\n",
+                "   - Make sure you have a GEE account enabled at https://earthengine.google.com/\n",
+                "\n",
+                "2. **\"Project not found\" error**\n",
+                "   - Ensure your Google Cloud Project has Earth Engine API enabled.\n",
+                "   - Check that the Project ID matches exactly with what's on your Cloud Console."
+            ]
+        }
+    ],
+    "metadata": {
+        "kernelspec": {
+            "display_name": "Python 3",
+            "language": "python",
+            "name": "python3"
+        },
+        "language_info": {
+            "name": "python",
+            "version": "3.8.0"
+        }
+    },
+    "nbformat": 4,
+    "nbformat_minor": 4
 }
