--- a/tutorials/07_complete_workflow.ipynb
+++ b/tutorials/07_complete_workflow.ipynb
@@ -10,7 +10,7 @@
                 "\n",
                 "## Workflow Overview\n",
                 "\n",
-                "1. Authenticate and initialize GEE\n",
+                "1. Authenticate and initialize GEE (Standard Methods)\n",
                 "2. Define region of interest\n",
                 "3. Load land cover data\n",
                 "4. Calculate landscape metrics\n",
@@ -26,14 +26,15 @@
             "outputs": [],
             "source": [
                 "# Import required packages\n",
-                "import geeadvance as ga\n",
                 "import ee\n",
+                "import geeadvance\n",
                 "import geemap\n",
                 "import pandas as pd\n",
                 "import matplotlib.pyplot as plt\n",
                 "\n",
-                "# Authenticate and initialize\n",
-                "ga.quick_setup()\n",
+                "# Authenticate and initialize with project ID\n",
+                "ee.Authenticate()\n",
+                "ee.Initialize(project='your-project-id')\n",
                 "\n",
                 "print(\"✓ Setup complete!\")"
             ]
@@ -54,7 +55,7 @@
             "outputs": [],
             "source": [
                 "# Define ROI - Example: Part of Western Ghats\n",
-                "roi = ga.create_bbox(\n",
+                "roi = geeadvance.create_bbox(\n",
                 "    min_lon=75.0,\n",
                 "    min_lat=12.0,\n",
                 "    max_lon=76.0,\n",
@@ -82,7 +83,7 @@
             "outputs": [],
             "source": [
                 "# Load ESA WorldCover 2020\n",
-                "landcover = ga.load_dataset(\n",
+                "landcover = geeadvance.load_dataset(\n",
                 "    'ESA/WorldCover/v100',\n",
                 "    start_date='2020-01-01',\n",
                 "    end_date='2020-12-31',\n",
@@ -90,7 +91,7 @@
                 ")\n",
                 "\n",
                 "# Get land cover classes\n",
-                "lc_classes = ga.get_landcover_classes('ESA/WorldCover/v100')\n",
+                "lc_classes = geeadvance.get_landcover_classes('ESA/WorldCover/v100')\n",
                 "print(\"Land cover classes:\")\n",
                 "for code, name in lc_classes.items():\n",
                 "    print(f\"  {code}: {name}\")"
@@ -136,7 +137,7 @@
             "outputs": [],
             "source": [
                 "# Calculate comprehensive metrics\n",
-                "metrics = ga.calculate_metrics(\n",
+                "metrics = geeadvance.calculate_metrics(\n",
                 "    landcover.select('Map'),\n",
                 "    roi,\n",
                 "    scale=100  # 100m resolution\n",
@@ -161,10 +162,10 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Download using geemap with automatic tiling for large areas\n",
+                "# Download using geeadvance with automatic tiling for large areas\n",
                 "output_file = 'landcover_western_ghats.tif'\n",
                 "\n",
-                "ga.download_large_area(\n",
+                "geeadvance.download_large_area(\n",
                 "    image=landcover.select('Map'),\n",
                 "    region=roi,\n",
                 "    filename=output_file,\n",
@@ -189,7 +190,7 @@
             "outputs": [],
             "source": [
                 "# Calculate area for each land cover class\n",
-                "area_stats = ga.area_metrics(landcover.select('Map'), roi, scale=100)\n",
+                "area_stats = geeadvance.area_metrics(landcover.select('Map'), roi, scale=100)\n",
                 "\n",
                 "print(\"Area Statistics:\")\n",
                 "print(area_stats)"
@@ -213,35 +214,13 @@
                 "print(\"✓ Metrics exported to landscape_metrics.csv\")\n",
                 "\n",
                 "# Export to Google Drive (for very large areas)\n",
-                "task_id = ga.export_to_drive(\n",
+                "task_id = geeadvance.export_to_drive(\n",
                 "    landcover.select('Map'),\n",
                 "    'landcover_export',\n",
                 "    region=roi,\n",
                 "    scale=100\n",
                 ")\n",
                 "print(f\"✓ Export task started: {task_id}\")"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Summary\n",
-                "\n",
-                "In this complete workflow, you learned:\n",
-                "\n",
-                "- ✓ How to set up a complete analysis pipeline\n",
-                "- ✓ How to load and visualize land cover data\n",
-                "- ✓ How to calculate landscape metrics\n",
-                "- ✓ How to download large areas using geemap tiling\n",
-                "- ✓ How to export results\n",
-                "\n",
-                "## Next Steps\n",
-                "\n",
-                "- Explore different land cover datasets\n",
-                "- Calculate metrics for specific classes\n",
-                "- Perform temporal analysis\n",
-                "- Create custom visualizations"
             ]
         }
     ],
