--- a/tutorials/07_complete_workflow.ipynb
+++ b/tutorials/07_complete_workflow.ipynb
@@ -21,9 +21,51 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "data": {
+                        "text/html": [
+                            "\n",
+                            "            <style>\n",
+                            "                .geemap-dark {\n",
+                            "                    --jp-widgets-color: white;\n",
+                            "                    --jp-widgets-label-color: white;\n",
+                            "                    --jp-ui-font-color1: white;\n",
+                            "                    --jp-layout-color2: #454545;\n",
+                            "                    background-color: #383838;\n",
+                            "                }\n",
+                            "\n",
+                            "                .geemap-dark .jupyter-button {\n",
+                            "                    --jp-layout-color3: #383838;\n",
+                            "                }\n",
+                            "\n",
+                            "                .geemap-colab {\n",
+                            "                    background-color: var(--colab-primary-surface-color, white);\n",
+                            "                }\n",
+                            "\n",
+                            "                .geemap-colab .jupyter-button {\n",
+                            "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+                            "                }\n",
+                            "            </style>\n",
+                            "            "
+                        ],
+                        "text/plain": [
+                            "<IPython.core.display.HTML object>"
+                        ]
+                    },
+                    "metadata": {},
+                    "output_type": "display_data"
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "✓ Setup complete!\n"
+                    ]
+                }
+            ],
             "source": [
                 "# Import required packages\n",
                 "import ee\n",
@@ -34,7 +76,7 @@
                 "\n",
                 "# Authenticate and initialize with project ID\n",
                 "ee.Authenticate()\n",
-                "ee.Initialize(project='your-project-id')\n",
+                "ee.Initialize(project='spatialgeography')\n",
                 "\n",
                 "print(\"✓ Setup complete!\")"
             ]
@@ -226,13 +268,21 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3",
+            "display_name": "maps",
             "language": "python",
             "name": "python3"
         },
         "language_info": {
+            "codemirror_mode": {
+                "name": "ipython",
+                "version": 3
+            },
+            "file_extension": ".py",
+            "mimetype": "text/x-python",
             "name": "python",
-            "version": "3.8.0"
+            "nbconvert_exporter": "python",
+            "pygments_lexer": "ipython3",
+            "version": "3.14.0"
         }
     },
     "nbformat": 4,
